# radlfabs.github.io

./: .gitignore  .nojekyll  LICENSE.html  README.md  _quarto.yml  about.html  about.qmd  closeread.css  datenschutz.html  datenschutz.qmd  impressum.html  impressum.qmd  index.html  index.qmd  legal.html  listings.json  mobile.html  mobile.qmd  portfolio.html  portfolio.qmd  prepare_quarto.sh  pyproject.toml  resume.html  resume.qmd  robots.txt  search.json  sitemap.xml  styles.css  test.html
data/: words.csv
docs/: LICENSE.html  about.html  datenschutz.html  impressum.html  index.html  mobile.html  portfolio.html  resume.html  search.json  sitemap.xml
docs/posts/bicycle/: index.html
docs/posts/flexcv/: index.html
docs/posts/soundscape-viz/: index.html
docs/posts/thesis/: index.html
posts/bicycle/: app.py  bicycle.quarto_ipynb  client.py  get_weather_data.py  index.html  index.qmd  lookup.py  model_class.py  pipeline.py  polars_bicycles.txt  postcodes.py  study_per_location.pkl
posts/bicycle/data/: cologne.geojson  inference_data.json  rhine.geojson
posts/bicycle/links/: cologne_shape_url.txt  links.txt  weather.txt
posts/flexcv/: index.html  index.qmd
posts/realtime-bicycles/: index.html  index.qmd
posts/soundscape-viz/: index.html  index.qmd
posts/thesis/: index.html  index.qmd  references.bib
posts/whitebalance/: index.html  index.qmd  ref.bib  references.bib
posts/wupsi-weather/: index.html  index.qmd  refs.bib
site_libs/bootstrap/: bootstrap-330853e99e85592fc51085ec45e71dab.min.css  bootstrap-ca4cdd6bbe55c7409825f4149d735892.min.css
(+26 files in other folders)
