[project]
name = "portfolio"
version = "0.1.0"
description = "A personal portfolio website"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "bokeh>=3.6.1",
    "colorcet>=3.1.0",
    "dask[dataframe]>=2024.11.2",
    "datashader>=0.16.3",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "great-tables>=0.14.0",
    "holoviews>=1.20.0",
    "humanize>=4.11.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "mapie>=0.9.1",
    "numba==0.60.0",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "panel>=1.5.4",
    "pip>=24.3.1",
    "plotly>5.24",
    "polars>=1.15.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "quarto>=0.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "statsmodels>=0.14.4",
    "xgboost>=2.1.3",
]
